--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/static/index.css">
-  <title>Document</title>
+  <title>URL 짧게 만들기</title>
 </head>
 <body>
   <h1>URL Shortly</h1>
@@ -22,7 +22,7 @@
     <% data.forEach( item => { %>
       <tr>
         <td><%= item.longUrl %></td>
-        <td><%= item.id %></td>
+        <td><a href="/<%= item.id %>" target="_blank"><%= item.id %></a></td>
       </tr>
     <% }) %>
   </tbody>
