--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,12 @@
 </head>
 <body>
   <h1>URL Shortly</h1>
+  
+  <form action="/" method="post">
+    <input type="url" name="longUrl">
+    <button type="submit">전송</button>
+  </form>
+  
   <table>
   <thead>
     <tr>
